[package]
name = "enigfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
cryptoxide = "^0.4.4"
thiserror = "1"
getrandom = "0.2"
anyhow = "1"
inquire = "0.6"
indicatif = "0.17"
